--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,3 +46,9 @@ en:
     help:
       practice: "Choose the practice."
       start: "Date and time for the event."
+  practice_technique:
+    help:
+      minutes: "Minutes to hold the technique"
+      seconds: "Seconds to hold the technique"
+      compensate: "Compensate to the other side?"
+      observations: "Any observations?"
