--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,8 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  switch_language: "Switch language"
+  this_file_language: "English"
   practices:
     index:
       new_practice: "New Practice"
