rework on play page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -86,6 +86,7 @@ en:
     pause: "Pause"
     next: "Next"
     resume: "Resume"
+    config: "Configure"
   practice_event:
     help:
       practice: "Choose the practice."
