--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -31,9 +31,6 @@ es:
       send_instructions: 'Recibirás un email con instrucciones para desbloquear tu cuenta en pocos minutos.'
       unlocked: 'Tu cuenta ha sido desbloqueada. Ya has accedido a tu cuenta.'
     mailer:
-      confirmation_instructions:
-        subject: 'Instrucciones de confirmación'
-      reset_password_instructions:
-        subject: 'Instrucciones para cambiar tu contraseña'
-      unlock_instructions:
-        subject: 'Instrucciones para desbloquear tu cuenta'
+      confirmation_instructions: 'Instrucciones de confirmación'
+      reset_password_instructions: 'Instrucciones para cambiar tu contraseña'
+      unlock_instructions: 'Instrucciones para desbloquear tu cuenta'
