translate technique type names

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
     signed_in_as: "Signed in as {{email}}. Not you?"
     signup_or_siginin: "{{signup}} or {{signin}}"
     credits: Credits
+    profile: "Profile"
   application:
     account_past_due: "Your account is past due. You have {{days}} remaining on the grace period."
     account_due: "Your account is due on {{days}} days."
