--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -186,6 +186,43 @@ es:
       words_connector: ", "
       two_words_connector: " y "
       last_word_connector: " y "
+  # Devise translations
+  errors:
+    messages:
+      not_found: "no encontrado"
+      already_confirmed: "ya ha sido confirmada"
+      not_locked: "no esta bloqueada"
+
+  devise:
+    failure:
+      unauthenticated: 'Necesitas acceder a tu cuenta o registrarte antes de continuar.'
+      unconfirmed: 'Necesitas confirmar tu cuenta antes de continuar.'
+      locked: 'Tu cuenta esta bloqueada.'
+      invalid: 'Contraseña o Email incorrecto.'
+      invalid_token: 'Token de autenticación incorrecto.'
+      timeout: 'Tu sesión ha expirado, por favor accede de nuevo para continuar.'
+      inactive: 'Tu cuenta no ha sido activada.'
+    sessions:
+      signed_in: 'Ha ingresado exitosamente.'
+      signed_out: 'Ha salido exitosamente.'
+    passwords:
+      send_instructions: 'Recibirás un email con instrucciones para cambiar tu contraseña en poco minutos.'
+      updated: 'Tu contraseña ha sido modificada. Ya has accedido a tu cuenta.'
+    confirmations:
+      send_instructions: 'Recibirás un email con instrucciones para confirmar tu cuenta en poco minutos.'
+      confirmed: 'Tu cuenta ha sido confirmada. Ya has accedido a tu cuenta.'
+    registrations:
+      signed_up: 'Te has registrado correctamente. Si está disponible, te habremos enviado un email de confirmación.'
+      updated: 'Has actualizado tu cuenta correctamente.'
+      destroyed: '!Adiós! Tu cuenta ha sido cancelada. Esperamos verte pronto.'
+    unlocks:
+      send_instructions: 'Recibirás un email con instrucciones para desbloquear tu cuenta en pocos minutos.'
+      unlocked: 'Tu cuenta ha sido desbloqueada. Ya has accedido a tu cuenta.'
+    mailer:
+      confirmation_instructions: 'Instrucciones de confirmación'
+      reset_password_instructions: 'Instrucciones para cambiar tu contraseña'
+      unlock_instructions: 'Instrucciones para desbloquear tu cuenta'
+  # Application translations
   activerecord:
     attributes:
       technique:
