--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -102,6 +102,7 @@ en:
       transaction_failed: "FAILED TO"
       card: "card"
     credits_dialog:
+      text1: "We want to thank the following people, who helped us build Sádhana and work to make it better every day"
       title: "Credits"
   practice:
     help:
