--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -295,6 +295,7 @@ es:
   shared:
     credits_dialog:
       title: Créditos
+      text1: "Querémos agradecer a las siguientes personas, que nos ayudaron y nos ayudan todos los dias a hacer que Sádhana sea cada vez mejor"
     confirm_dialog:
       title: "Confirmar eliminación"
       content: "¿Está seguro?"
