hide credit card

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,6 +175,7 @@ en:
     config: "Configure"
     preferences: "Preferences"
     invite: "Invite"
+    remove: "remove"
   practice_event:
     help:
       practice: "Choose the practice."
