--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,6 +103,7 @@ en:
     play:
       play_preferences_dialog:
         title: "Play Preferences"
+    paid_account_notice: "You require a paid subscription for full functionality."
   shared:
     confirm_dialog:
       title: "Confirm delete"
@@ -226,3 +227,4 @@ en:
   practice_events:
     index:
       new_practice_event: "New event"
+    paid_account_notice: "You require a paid subscription to access the calendar functionality."
