style on invite

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -120,6 +120,7 @@ en:
       title: "Resend confirmation instructions"
     new_invitation_dialog:
       title: "Invite a friend"
+      invite_from: "Invite a friend from"
     links:
       sign_in: "Sign in"
       sign_up: "Sign up"
